# MLCookieCutter

./: cookiecutter.json
{{cookiecutter.directory_name}}/: .pre-commit-config.yaml  Dockerfile.base  Makefile  pyproject.toml
