[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = "{{cookiecutter.python_version}}"
dependencies = []

[tool.uv]
dev-dependencies = [
    "dvc[s3]>=3.55.2",
    "dvclive>=3.48.0",
    "gto>=1.7.1",
    "interrogate>=1.7.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "ruff>=0.6.9",
]
