[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = "{{cookiecutter.python_version}}"
dependencies = []

[tool.uv]
dev-dependencies = [
    "dvc[s3]>=3.55.2",
    "dvclive>=3.48.0",
    "gto>=1.7.1",
    "interrogate>=1.7.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "ruff>=0.8.6",
    "loguru>=0.7.2",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
ignore-property-decorators = false
fail-under = 30
exclude = ["setup.py", "docs"]
verbose = 0
omit-covered-files = false
quiet = false
whitelist-regex = []
ignore-regex = []
color = true

[tool.ruff]
target-version = "{{cookiecutter.target_python_version}}"
